# oeis-mcp-server-rs

./: .coderabbit.yaml  .cspell.yml  .dockerignore  .editorconfig  .markdownlint-cli2.jsonc  .yamllint.yml  AGENTS.md  Cargo.toml  Dockerfile  README.md  Taskfile.yml  base-dict.txt  biome.jsonc  create-release-tag.sh  lefthook.yml  mise.toml  pyproject.toml  renovate.json  setup.sh
.claude/: settings.json
.cspell/dicts/: base.txt  project.txt
.github/: copilot-instructions.md  dependabot.yml
.github/workflows/: check-empty.yml  check-github-workflow.yml  check-json.yml  check-markdown.yml  check-mise-lock.yml  check-rust.yml  check-secrets.yml  check-spelling.yml  claude-fix-dependabot.yml  dependabot-auto-approve-and-merge.yml  docker-publish.yml  mise-upgrade.yml  release.yml  sync-upstream.yml
docs/: CONTRIBUTING.md  TEMPLATE_USAGE.md
integration_tests/: .prettierignore  index.test.js  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
src/: counter.rs  main.rs  oeis.rs  oeis_client.rs  tracer.rs
tasks/: JsonTasks.yml  MarkdownTasks.yml  MiseTasks.yml  RustTasks.yml  TestTasks.yml  YamlTasks.yml
