[package]
name = "oeis-mcp-server"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
async-trait = "0.1"
axum = { version = "0.8", features = ["macros"] }
httpmock = "0.8"
reqwest = { version = "0.12", features = [
  "json",
  "rustls-tls",
], default-features = false }
rmcp = { version = "0.14", features = ["transport-streamable-http-server"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = [
  "macros",
  "rt",
  "rt-multi-thread",
  "io-std",
  "signal",
] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [
  "env-filter",
  "std",
  "fmt",
] }

[dev-dependencies]
tokio-stream = "0.1"
tokio-util = { version = "0.7", features = ["codec"] }
